K8S/mysql-platform-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: mysql-platform-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mssql

  template:
    metadata:
      labels:
        app: mssql

    spec:
      containers:
        - name: mssql
          image: mirror-docker.runflare.com/mssql/server:2019-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - mountPath: /var/opt/mssql/data
              name: mssqldb

      volumes:
        - name: mssqldb
          persistentVolumeClaim:
            claimName: mssql-claim
