K8S/coammnd.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: command-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: commandservice

  template:
    metadata:
      labels:
        app: commandservice

    spec:
      imagePullSecrets:
        - name: docker-registry-credentials

      containers:
        - name: commandservice
          image: registry.hamdocker.ir/hadi-org/commandservice:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service

metadata:
  name: command-clusterip-service

spec:
  type: ClusterIP

  selector:
    app: commandservice

  ports:
    - name: commandservice
      protocol: TCP
      port: 80
      targetPort: 8080
