K8S/command-cluster-ip.yaml
apiVersion: v1
kind: Service

metadata:
  name: command-clusterip-service

spec:
  type: ClusterIP

  selector:
    app: commandservice

  ports:
    - name: commandservice
      protocol: TCP
      port: 80
      targetPort: 8080
