K8S/mssql-clusterip-.yaml
apiVersion: v1

kind: Service

metadata:
  name: mssql-clusterip

spec:
  type: ClusterIP

  selector:
    app: mssql

  ports:
    - name: mssql
      protocol: TCP
      port: 1433
      targetPort: 1433

---
apiVersion: v1

kind: Service

metadata:
  name: mssql-loadbalancer

spec:
  type: LoadBalancer

  selector:
    app: mssql

  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
