K8S/platform-cluster-ip.yaml
apiVersion: v1
kind: Service

metadata:
  name: platform-clusterip-service

spec:
  type: ClusterIP

  selector:
    app: platformservice

  ports:
    - name: platformservice
      protocol: TCP
      port: 80
      targetPort: 8080
