K8S/platform-service-nodeport.yaml
apiVersion: v1
kind: Service

metadata:
  name: platform-service-nodeport

spec:
  type: NodePort

  selector:
    app: platformservice

  ports:
    - name: platformservice
      protocol: TCP
      targetPort: 8080 # ASP.NET port
      port: 80 # Exposed port of the pod itself 80:8080
      nodePort: 30001 # Exposed port 30000-32767 nodePort -> port -> targetPort (container)
