K8S/platform.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: platform-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: platformservice

  template:
    metadata:
      labels:
        app: platformservice

    spec:
      imagePullSecrets:
        - name: docker-registry-credentials

      containers:
        - name: platformservice
          image: registry.hamdocker.ir/hadi-org/platformservice:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service

metadata:
  name: platform-clusterip-service

spec:
  type: ClusterIP

  selector:
    app: platformservice

  ports:
    - name: platformservice
      protocol: TCP
      port: 80
      targetPort: 8080
