K8S/rabbitmq.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: rabbitmq-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: rabbitmq

  template:
    metadata:
      labels:
        app: rabbitmq

    spec:
      containers:
        - name: rabbitmq
          image: mirror-docker.runflare.com/library/rabbitmq:management
          ports:
            - containerPort: 15672
              name: rb-mngmnt-port
            - containerPort: 5672
              name: rb-msg-port

---
apiVersion: v1
kind: Service

metadata:
  name: rabbitmq-clusterip

spec:
  type: ClusterIP

  selector:
    app: rabbitmq

  ports:
    - name: rb-mngmnt-port
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: rb-msg-port
      protocol: TCP
      port: 5672
      targetPort: 5672

---
apiVersion: v1
kind: Service

metadata:
  name: rabbitmq-loadbalancer

spec:
  type: LoadBalancer

  selector:
    app: rabbitmq

  ports:
    - name: rb-mngmnt-port
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: rb-msg-port
      protocol: TCP
      port: 5672
      targetPort: 5672
