K8S/gateway.yaml
# gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-gateway
  namespace: default
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 8085
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: command-route
  namespace: default
spec:
  parentRefs:
    - name: my-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/c
      backendRefs:
        - name: command-clusterip-service # replace with your actual service name
          port: 80 # replace with your actual port
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: platform-route
  namespace: default
spec:
  parentRefs:
    - name: my-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/platforms
      backendRefs:
        - name: platform-clusterip-service # replace with your actual service name
          port: 80 # replace with your actual port
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: platform-grpc-route
spec:
  parentRefs:
    - name: my-gateway
  rules:
    - backendRefs:
        - name: platform-clusterip-service
          port: 670
